SideCarContainers.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: init-container-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      app: init-container-app
  template:
    metadata:
      labels:
        app: init-container-app
    spec:
      containers:
      - name: main-container
        image: busybox
        command:
          [
            "sh",
            "-c",
            "while true; do echo "Main container running"; sleep 10; done"
          ]
        volumeMounts:
        - name: tasks-volume
          mountPath: /tasks
      volumes:
      - name: tasks-volume
        emptyDir: {}
