testpod.yml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  labels:
    app: testpod1
  name: testpod1
spec:
  minreadySeconds: 10
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  selector:
    matchLabels:
      app: testpod1
  template:
    metadata:
      labels:
        app: testpod1
    spec:
      containers:
        - image: kiran2361993/kubegame:v2
          name: kubegame
