ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: result-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    spec.ingressClassName: nginx
#  changed - as it is depracted "kubernetes.io/ingress.class"
spec:
  tls:
    - hosts:
        - "result.gehana26.fun"
      secretName: nginx-tls-default
  rules:
    - host: result.gehana26.fun
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: result
                port:
                  number: 80

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vote-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    spec.ingressClassName: nginx
spec:
  tls:
    - hosts:
        - "vote.gehana26.fun"
        - "www-www.gehana26.fun"
      secretName: nginx-tls-default
  rules:
    - host: vote.gehana26.fun
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: vote
                port:
                  number: 80
    - host: www-www.gehana26.fun
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: vote
                port:
                  number: 80
